{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 29,
  "lineage": "eb7f05f9-6689-2022-c228-0513254f9ea6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b00e8f262c6e882e",
            "association_id": "eipassoc-0f8fcf11032859dd7",
            "domain": "vpc",
            "id": "eipalloc-0b00e8f262c6e882e",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0211a8907c04a4bde",
            "private_dns": "ip-10-0-1-65.us-west-2.compute.internal",
            "private_ip": "10.0.1.65",
            "public_dns": "ec2-52-26-116-127.us-west-2.compute.amazonaws.com",
            "public_ip": "52.26.116.127",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Author": "Itamar Tziger",
              "Name": "eip-nat_management"
            },
            "tags_all": {
              "Author": "Itamar Tziger",
              "Name": "eip-nat_management"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "jenkins_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:887234254276:loadbalancer/tf-lb-20240211191818681400000002",
            "availability_zones": [
              "us-west-2a",
              "us-west-2b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20240211191818681400000002-788800685.us-west-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 5,
                "target": "TCP:8080",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "tf-lb-20240211191818681400000002",
            "idle_timeout": 60,
            "instances": [
              "i-038ad42496d1a2635"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 443,
                "lb_protocol": "https",
                "ssl_certificate_id": "arn:aws:acm:us-west-2:887234254276:certificate/e77628e7-a155-47e1-a30a-ee8fad9816ef"
              },
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "tf-lb-20240211191818681400000002",
            "name_prefix": "tf-lb-",
            "security_groups": [
              "sg-0c63b40fe82cf9b94"
            ],
            "source_security_group": "887234254276/elb_jenkins_sg",
            "source_security_group_id": "sg-0c63b40fe82cf9b94",
            "subnets": [
              "subnet-04d87f0b5a2466207",
              "subnet-0ccfaf0564ccf38bb"
            ],
            "tags": {
              "Author": "Itamar Tziger",
              "Name": "jenkins_elb"
            },
            "tags_all": {
              "Author": "Itamar Tziger",
              "Name": "jenkins_elb"
            },
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_instance.jenkins_master",
            "aws_key_pair.management",
            "aws_security_group.bastion_host",
            "aws_security_group.elb_jenkins_sg",
            "aws_security_group.jenkins_master_sg",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.management",
            "data.aws_ami.jenkins-master",
            "data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06e2fb681c2dc948d",
            "arn": "arn:aws:ec2:us-west-2:887234254276:instance/i-0d505a68684baea3e",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d505a68684baea3e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "management",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0eaa42d686d7b8d73",
            "private_dns": "ip-10-0-1-98.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.98",
            "public_dns": "ec2-54-190-188-219.us-west-2.compute.amazonaws.com",
            "public_ip": "54.190.188.219",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0c1bde26bd39172a8",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ccfaf0564ccf38bb",
            "tags": {
              "Author": "Itamar Tziger",
              "Name": "bastion"
            },
            "tags_all": {
              "Author": "Itamar Tziger",
              "Name": "bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-034096d1e5becd8b2"
            ]
          },
          "dependencies": [
            "aws_key_pair.management",
            "aws_security_group.bastion_host",
            "aws_subnet.public_subnets",
            "aws_vpc.management",
            "data.aws_ami.bastion",
            "data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00a69bfebe0207247",
            "arn": "arn:aws:ec2:us-west-2:887234254276:instance/i-038ad42496d1a2635",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-038ad42496d1a2635",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "management",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cf1bad929c237b3d",
            "private_dns": "ip-10-0-0-73.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.73",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e107d2f2aab05518",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fa4384e7421958cd",
            "tags": {
              "Author": "Itamar Tziger",
              "Name": "jenkins_master"
            },
            "tags_all": {
              "Author": "Itamar Tziger",
              "Name": "jenkins_master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-081e93dba57d13887"
            ]
          },
          "dependencies": [
            "aws_key_pair.management",
            "aws_security_group.bastion_host",
            "aws_security_group.elb_jenkins_sg",
            "aws_security_group.jenkins_master_sg",
            "aws_subnet.private_subnets",
            "aws_vpc.management",
            "data.aws_ami.jenkins-master",
            "data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:887234254276:internet-gateway/igw-06ae313079ea81674",
            "id": "igw-06ae313079ea81674",
            "owner_id": "887234254276",
            "tags": {
              "Author": "Itamar Tziger",
              "Name": "igw_management"
            },
            "tags_all": {
              "Author": "Itamar Tziger",
              "Name": "igw_management"
            },
            "vpc_id": "vpc-06db976ca19630493"
          },
          "dependencies": [
            "aws_vpc.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b00e8f262c6e882e",
            "association_id": "eipassoc-0f8fcf11032859dd7",
            "connectivity_type": "public",
            "id": "nat-0ca45ce7f681ef418",
            "network_interface_id": "eni-0211a8907c04a4bde",
            "private_ip": "10.0.1.65",
            "public_ip": "52.26.116.127",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ccfaf0564ccf38bb",
            "tags": {
              "Author": "Itamar Tziger",
              "Name": "nat_management"
            },
            "tags_all": {
              "Author": "Itamar Tziger",
              "Name": "nat_management"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_subnets",
            "aws_vpc.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:887234254276:route-table/rtb-0fdc31d0fa2f5552a",
            "id": "rtb-0fdc31d0fa2f5552a",
            "owner_id": "887234254276",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ca45ce7f681ef418",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Author": "Itamar Tziger",
              "Name": "private_rt_management"
            },
            "tags_all": {
              "Author": "Itamar Tziger",
              "Name": "private_rt_management"
            },
            "timeouts": null,
            "vpc_id": "vpc-06db976ca19630493"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnets",
            "aws_vpc.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:887234254276:route-table/rtb-0249e46377811f269",
            "id": "rtb-0249e46377811f269",
            "owner_id": "887234254276",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06ae313079ea81674",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Author": "Itamar Tziger",
              "Name": "public_rt_management"
            },
            "tags_all": {
              "Author": "Itamar Tziger",
              "Name": "public_rt_management"
            },
            "timeouts": null,
            "vpc_id": "vpc-06db976ca19630493"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04fff0e316ed5aa8a",
            "route_table_id": "rtb-0fdc31d0fa2f5552a",
            "subnet_id": "subnet-0fa4384e7421958cd"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.management"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050a8005105750383",
            "route_table_id": "rtb-0fdc31d0fa2f5552a",
            "subnet_id": "subnet-052913cc74c345349"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef538b915ca4322f",
            "route_table_id": "rtb-0249e46377811f269",
            "subnet_id": "subnet-0ccfaf0564ccf38bb"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.management"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3f2eb038e710732",
            "route_table_id": "rtb-0249e46377811f269",
            "subnet_id": "subnet-04d87f0b5a2466207"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:887234254276:security-group/sg-034096d1e5becd8b2",
            "description": "Allow SSH from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-034096d1e5becd8b2",
            "ingress": [
              {
                "cidr_blocks": [
                  "109.226.28.76/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_sg_management",
            "name_prefix": "",
            "owner_id": "887234254276",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "Itamar Tziger",
              "Name": "bastion_sg_management"
            },
            "tags_all": {
              "Author": "Itamar Tziger",
              "Name": "bastion_sg_management"
            },
            "timeouts": null,
            "vpc_id": "vpc-06db976ca19630493"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.management",
            "data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:887234254276:security-group/sg-0c63b40fe82cf9b94",
            "description": "Allow http traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c63b40fe82cf9b94",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb_jenkins_sg",
            "name_prefix": "",
            "owner_id": "887234254276",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "Itamar Tziger",
              "Name": "elb_jenkins_sg"
            },
            "tags_all": {
              "Author": "Itamar Tziger",
              "Name": "elb_jenkins_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06db976ca19630493"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_master_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:887234254276:security-group/sg-081e93dba57d13887",
            "description": "Allow traffic on port 8080 and enable SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-081e93dba57d13887",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c63b40fe82cf9b94"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-034096d1e5becd8b2"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jenkins_master_sg",
            "name_prefix": "",
            "owner_id": "887234254276",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "Itamar Tziger",
              "Name": "jenkins_master_sg"
            },
            "tags_all": {
              "Author": "Itamar Tziger",
              "Name": "jenkins_master_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06db976ca19630493"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_host",
            "aws_security_group.elb_jenkins_sg",
            "aws_vpc.management",
            "data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:887234254276:subnet/subnet-0fa4384e7421958cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa4384e7421958cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "887234254276",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "Itamar Tziger",
              "Name": "private_10.0.0.0_us-west-2a"
            },
            "tags_all": {
              "Author": "Itamar Tziger",
              "Name": "private_10.0.0.0_us-west-2a"
            },
            "vpc_id": "vpc-06db976ca19630493"
          },
          "dependencies": [
            "aws_vpc.management"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:887234254276:subnet/subnet-052913cc74c345349",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052913cc74c345349",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "887234254276",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "Itamar Tziger",
              "Name": "private_10.0.2.0_us-west-2b"
            },
            "tags_all": {
              "Author": "Itamar Tziger",
              "Name": "private_10.0.2.0_us-west-2b"
            },
            "vpc_id": "vpc-06db976ca19630493"
          },
          "dependencies": [
            "aws_vpc.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:887234254276:subnet/subnet-0ccfaf0564ccf38bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ccfaf0564ccf38bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "887234254276",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "Itamar Tziger",
              "Name": "public_10.0.1.0_us-west-2a"
            },
            "tags_all": {
              "Author": "Itamar Tziger",
              "Name": "public_10.0.1.0_us-west-2a"
            },
            "vpc_id": "vpc-06db976ca19630493"
          },
          "dependencies": [
            "aws_vpc.management"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:887234254276:subnet/subnet-04d87f0b5a2466207",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d87f0b5a2466207",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "887234254276",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "Itamar Tziger",
              "Name": "public_10.0.3.0_us-west-2b"
            },
            "tags_all": {
              "Author": "Itamar Tziger",
              "Name": "public_10.0.3.0_us-west-2b"
            },
            "vpc_id": "vpc-06db976ca19630493"
          },
          "dependencies": [
            "aws_vpc.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "management",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:887234254276:vpc/vpc-06db976ca19630493",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05f6ba8529257440b",
            "default_route_table_id": "rtb-0ecdb9ed23a6fda7a",
            "default_security_group_id": "sg-089663ed016c1eaa9",
            "dhcp_options_id": "dopt-a796a7df",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06db976ca19630493",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ecdb9ed23a6fda7a",
            "owner_id": "887234254276",
            "tags": {
              "Author": "Itamar Tziger",
              "Name": "management"
            },
            "tags_all": {
              "Author": "Itamar Tziger",
              "Name": "management"
            }
          }
        }
      ]
    }
  ]
}